# LilyGo_T-Display_SHT40_APDS9960

./: .clang-format  .gitignore  CMakeLists.txt  LilyGo_T-Display_SHT40_APDS9960.h  LilyGo_T-Display_SHT40_APDS9960.ino  NetworkFunctions.ino  README.md
